Styling contrast fix

--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -34,7 +34,8 @@
     }
 
     .section-selected {
-      background-color: styles.$govuk-focus-colour;
+      background-color: #005ea5;
+      color: white;
     }
 
     .date-picker-announce {
